# talks

./: .gitignore  readme.md
131218_JenkinsDockerConan/: JenkinsDockerConan.html
200220_ConanCppElephant/: ConanCppElephant.html
200220_ConanCppElephant/examples/helloapp/: CMakeLists.txt  conanfile.txt  main.cpp
200220_ConanCppElephant/examples/hellolib/0.0.1/: CMakeLists.txt  conanfile.py  readme.md
200220_ConanCppElephant/examples/hellolib/0.0.1/src/: hello.cpp
200220_ConanCppElephant/examples/hellolib/0.0.2/: CMakeLists.txt  conanfile.py  readme.md
200220_ConanCppElephant/examples/hellolib/0.0.2/src/: hello.cpp
200220_ConanCppElephant/examples/opencv/: CMakeLists.txt  conanfile.txt  main.cpp  readme.md
